<resources>
    <string name="app_name">AWSCognitoLogin</string>
    <string name="awsco_user_input_placeholder_txt">User</string>
    <string name="awsco_password_input_placeholder_txt">Password</string>
    <string name="awsco_signup_btn_qt_txt">Don\'t have an account?</string>
    <string name="awsco_signup_btn_answ_text">Sign Up</string>
    <string name="awsco_actacc_txt">Activate account</string>
    <string name="awsco_forpas_txt">Forgot password</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_title">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="field_required">Field required</string>
    <string name="activate_account">Activate Account</string>
    <string name="enter_the_code_sent_to_your_email">Enter the code sent to your email</string>
    <string name="code">Code</string>
    <string name="enter_the_username_used_for_registration">Enter the username used for registration</string>
    <string name="send_code">Send Code</string>
    <string name="confirmation_code_title">Confirmation Code</string>
    <string name="sign_in">Sign In</string>
    <string name="awsco_forgot_pwd_title_txt">Forgot Password</string>
    <string name="awsco_forgot_pwd_desc_txt">Enter the username used for registration</string>
    <string name="awsco_update_pwd_title_txt">Update Password</string>
    <string name="awsco_update_pwd_desc_txt">Enter the code sent to your email and update your password</string>
    <string name="awsco_update_pwd_btn_txt">Update Password</string>
    <string name="dialog_title">Update password complete</string>
    <string name="dialog_description">Your password has been reset. Please, login now with your new credentials.</string>
    <string name="dialog_positive_button_txt">OK</string>
    <string name="send">Send</string>
    <string name="your_passwords_are_not_equal">Your password are not equal</string>
    <string name="invalid_email">Invalid email</string>
    <string name="resend_code">Resend Code</string>
    <string name="activate">Activate</string>
    <string name="on_activate_account_success">Your account was activated successfully</string>
    <string name="on_activate_account_failed_title">Account Activation Failed</string>
    <string name="on_activate_account_failed_message">Your account couldn\'t be activated. Please try again later.</string>
    <string name="on_confirmation_code_failed_title">Error Sending Confirmation Code</string>
    <string name="on_confirmation_code_failed_message">There was an error sending the confirmation code. Please, try again.</string>
    <string name="on_forgot_password_failed_title">Error</string>
    <string name="on_forgot_password_failed_message">There was an error. Please, try again.</string>
    <string name="on_sign_in_failed_title">Sign In Failed</string>
    <string name="on_sign_in_failed_message">There was an error signing in. Please check your username and password and try again.</string>
    <string name="on_sign_up_failed_title">Sign Up Failed</string>
    <string name="on_sign_up_failed_message">There was an error signing you up. Please, check if your password complies with our website.</string>
    <string name="on_username_failed_pattern">Username is not valid. Please choose another.</string>
    <string name="on_sign_up_failed_username_doesnt_exists">Username exists already.</string>
</resources>
