<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/awsco_bc_color">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/awsco_logo_image" />

    <TextView
        android:id="@+id/tv_sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="Sign In"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/awsco_input_ulc"
        android:ems="10"
        android:hint="@string/awsco_user_input_placeholder_txt"
        android:inputType="textPersonName"
        android:textColor="@color/awsco_input_txt_color"
        android:textSize="@dimen/awsco_input_fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_title" />

    <TextView
        android:id="@+id/tv_user_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Field required"
        android:textColor="@color/awsco_validation_txt_color"
        android:textSize="@dimen/awsco_validation_fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/awsco_input_ulc"
        android:ems="10"
        android:hint="@string/awsco_password_input_placeholder_txt"
        android:inputType="textPassword"
        android:textColor="@color/awsco_input_txt_color"
        android:textSize="@dimen/awsco_input_fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_helper" />

    <TextView
        android:id="@+id/tv_password_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Field required"
        android:textColor="@color/awsco_validation_txt_color"
        android:textSize="@dimen/awsco_validation_fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/awsco_forpas_txt"
        android:textAlignment="textEnd"
        android:textColor="@color/awsco_link_color"
        android:textSize="@dimen/awsco_link_fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_helper" />

    <LinearLayout
        android:id="@+id/btn_sign_in"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/aws_btn_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textColor="@color/awsco_btn_txt_color"
            android:textSize="@dimen/awsco_btn_fontsize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_activate_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/awsco_actacc_txt"
        android:textColor="@color/awsco_link_color"
        android:textSize="@dimen/awsco_link_fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <LinearLayout
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/aws_btn_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/awsco_signup_btn_qt_txt"
            android:textColor="@color/awsco_btn_txt_color"
            android:textSize="@dimen/awsco_btn_fontsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/awsco_signup_btn_answ_text"
            android:textColor="@color/awsco_btn_txt_color"
            android:textSize="@dimen/awsco_btn_fontsize"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>