<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/awsco_bc_color">

    <TextView
        android:id="@+id/tv_activate_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/awsco_forgot_pwd_title_txt"
        android:textColor="@color/awsco_confirmation_title_color"
        android:textSize="@dimen/awsco_confirmation_title_fontsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activate_account_indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/awsco_forgot_pwd_desc_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activate_account_title" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_code_fp"
        style="@style/InputStyle"
        android:layout_width="@dimen/et_field_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/awsco_user_input_placeholder_txt"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activate_account_indication"
        app:met_floatingLabel="normal"
        app:met_underlineColor="@color/awsco_input_ulc" />

    <LinearLayout
        android:id="@+id/btn_activate"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/aws_btn_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code_fp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send"
            android:textColor="@color/awsco_btn_txt_color"
            android:textSize="@dimen/awsco_btn_fontsize" />
    </LinearLayout>

    <include
        android:id="@+id/l_progress"
        layout="@layout/layout_progress"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>