<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_confirmation_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/awsco_bc_color">

    <ImageView
        android:id="@+id/iv_back_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/iv_close_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/v_close_cc"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circle" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_centerInParent="true"
            android:src="@drawable/cancel" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_confirmation_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/confirmation_code_title"
        android:textColor="@color/awsco_confirmation_title_color"
        android:textSize="@dimen/awsco_confirmation_title_fontsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_confirmation_code_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/field_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/field_margin"
        android:gravity="center"
        android:text="@string/enter_the_username_used_for_registration"
        android:textColor="#8E8E93"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmation_code_title" />

    <RelativeLayout
        android:id="@+id/rl_username_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/field_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/field_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmation_code_description">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_username_cc"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/field_margin"
            android:ems="10"
            android:hint="@string/awsco_user_input_placeholder_txt"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:met_floatingLabel="normal"
            app:met_underlineColor="@color/awsco_input_ulc" />

        <RelativeLayout
            android:id="@+id/rl_clear_username_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/field_margin"
            android:visibility="invisible">

            <View
                android:id="@+id/v_clear_username_cc"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/circle" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_centerInParent="true"
                android:src="@drawable/cancel" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_username_validation_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/field_margin"
        android:text="@string/field_required"
        android:textColor="@color/awsco_validation_txt_color"
        android:textSize="@dimen/awsco_validation_fontsize"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/rl_username_cc"
        app:layout_constraintTop_toBottomOf="@+id/rl_username_cc" />

    <LinearLayout
        android:id="@+id/btn_send_code"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/field_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/field_margin"
        android:background="@drawable/aws_btn_background"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_validation_cc">

        <TextView
            android:id="@+id/tv_send_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_code"
            android:textColor="@color/awsco_btn_txt_color"
            android:textSize="@dimen/awsco_btn_fontsize" />
    </LinearLayout>

    <include
        android:id="@+id/l_progress"
        layout="@layout/layout_progress"
        android:visibility="gone" />
</android.support.constraint.ConstraintLayout>